CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_COMPILER g++)

SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -fpermissive -fPIC")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -fpermissive -fPIC")

SET(CMAKE_BUILD_TYPE Release)
#set(CMAKE_BUILD_TYPE Debug)


PROJECT(calibDS325)


FIND_PACKAGE(OpenCV)
LINK_DIRECTORIES("/usr/local/lib")

ADD_EXECUTABLE(calibDS325 ./src/main.cpp ./src/calibDS325.cpp)
TARGET_LINK_LIBRARIES(calibDS325 ${OpenCV_LIBRARIES} gflags)
